# PythonExamples

./: ex_contextmanager.py  ex_dataclasses.py  ex_filesystem.py  ex_functools.py  ex_generator.py  ex_inspect.py  ex_iterator_vs_iterable.py  ex_partial.py  ex_passlib.py  ex_string_compress.py  ex_tenacity.py  pyproject.toml  pytest.ini
ex-mocking/: __init__.py
ex-pytest/: test_setenv.py
ex_async/: Asyncio_vs_MultiThreading.md  async_constructor_for_inheritance.py  async_decorator.py  async_for.py  async_with.py  asyncio_await.py  asyncio_urlopen.py  create_task.py  find_user_async.py  native_coroutine.py  request_http_api_async.py  urlopen.py
ex_dataclasses/: dataclass_json.py  ex_dataclasses.py
ex_filesystem/: pathlib_basic.py
ex_generator/: basic.py  typehint.py
ex_itertools/: 1. flattening.py  2. pairwise.py
ex_logging/: basic.py  custom_log_level.py  logging_exception.py  logging_filter.py  logging_perfomance.ipynb  logrotate.py  usage_dictionary_config.py
ex_mailhog/: README.md  notification.py
ex_mocking/: ex_mock.py
ex_pahomqtt/: asiomqtt_example_1__in_jupyter_notebook.ipynb  basic.py
ex_pika/: 1.basic.py  2.durable_queue.py  3-1.publisher.py  3-2.subscriber.py
ex_pyarmor/: README.md  single_file.py
ex_pydantic/: base_settings.py  cammel_base_model.py  data_range.py
ex_pytest/: conftest.py  test_setenv.py
ex_python/: 1. int.py
ex_python38/: positional_only_param.py  self_documenting_expressions.py
ex_redis/: async_redis_basic.py  async_redis_basic2.py  basic.py  connection_pool.py  index_and_jsondata_query.py  zadd.py  (+1 more)
(+37 files in other folders)
