[tool.poetry]
name = "python-ex"
version = "0.1.0"
description = ""
authors = ["ShinHeeJin <sisesu92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tenacity = "^8.2.3"
jupyter = "^1.0.0"
pytest = "^7.4.3"
pytest-timeout = "^2.2.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
