[tool.poetry]
name = "python-ex"
version = "0.1.0"
description = ""
authors = ["ShinHeeJin <sisesu92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tenacity = "^8.2.3"
jupyter = "^1.0.0"
pytest = "^7.4.3"
pytest-timeout = "^2.2.0"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
paho-mqtt = "^1.6.1"
dataclasses-json = "^0.6.4"
redis = {version = "5.0.1", extras = ["hiredis"]}
pytest-asyncio = "^0.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
